--- a/BR-MS/UserQuery.html
+++ b/BR-MS/UserQuery.html
@@ -45,10 +45,10 @@
 <body>
 
 <div id="app" v-cloak>
-    <el-form id="search" :inline="true" ref="queryParams" label-position="right" label-with="80px" :model="queryParams"
-             v-loading.fullscreen="initializing" element-loading-text="正在获取数据"
+    <el-form id="search" :inline="true" ref="queryForm" label-position="right" label-with="80px" :model="queryParams"
+             v-loading.fullscreen="initializing" element-loading-text="正在获取数据" :rules="queryRules"
              element-loading-background="rgba(0,0,0,0.7)">
-        <el-form-item label="用户ID">
+        <el-form-item label="用户ID" prop="id">
             <el-input v-model="queryParams.id"></el-input>
         </el-form-item>
         <el-form-item label="单位">
@@ -65,7 +65,7 @@
                     queryParams[i]='';
                 };
                 search();
-            }">重置
+            }">返回
             </el-button>
         </el-form-item>
     </el-form>
@@ -109,18 +109,18 @@
                 </el-form>
             </template>
         </el-table-column>
-        <el-table-column prop="realName" label="姓名" width="75px"></el-table-column>
-        <el-table-column prop="userId" label="用户ID" width="125px"></el-table-column>
-        <el-table-column prop="username" label="用户名" width="125px"></el-table-column>
-        <el-table-column prop="role" label="用户类型" width="125px"></el-table-column>
-        <el-table-column prop="iDType" label="证件类型" width="125px">
+        <el-table-column prop="realName" label="姓名"></el-table-column>
+        <el-table-column prop="userId" label="用户ID" ></el-table-column>
+        <el-table-column prop="username" label="用户名" ></el-table-column>
+        <el-table-column prop="role" label="用户类型" ></el-table-column>
+        <el-table-column prop="iDType" label="证件类型" >
             <template slot-scope="props">
                 {{['公民身份证','护照','军官证'][parseInt(props.row.iDType)-1]}}
             </template>
         </el-table-column>
-        <el-table-column prop="iDNumber" label="证件号码" width="125px"></el-table-column>
-        <el-table-column prop="companyName" label="单位名称" width="150px"></el-table-column>
-        <el-table-column label="操作">
+        <el-table-column prop="iDNumber" label="证件号码" ></el-table-column>
+        <el-table-column prop="companyName" label="单位名称" ></el-table-column>
+        <el-table-column label="操作" width="300px">
             <template slot-scope="props">
                 <el-button type="primary" size="mini" @click="()=>{changePassword(props.row.userId)}">重置密码</el-button>
                 <el-button size="mini" @click="()=>{
@@ -298,6 +298,9 @@
                 editedForm: generalForm,
                 editRule: {
 
+                },
+                queryRules: {
+                    id: {pattern:/\d+/, message: '请输入数字'}
                 }
             }
         },
@@ -308,14 +311,20 @@
         },
         methods: {
             search: () => {
-                app.initializing = true;
-                var validate = {};
-                for (var i in app.queryParams) {
-                    if (app.queryParams[i] !== "") {
-                        validate[i] = app.queryParams[i];
+                app.$refs['queryForm'].validate((valid)=>{
+                    if(valid){
+                        app.initializing = true;
+                        var validate = {};
+                        for (var i in app.queryParams) {
+                            if (app.queryParams[i] !== "") {
+                                validate[i] = app.queryParams[i];
+                            }
+                        }
+                        getData(validate);
+                    }else{
+                        return false;
                     }
-                }
-                getData(validate);
+                })
             },
             confirmEdition: function (formName) {
                 this.$refs[formName].validate((valid) => {
