--- a/BR-MS/UserAuth.html
+++ b/BR-MS/UserAuth.html
@@ -71,18 +71,18 @@
                 </el-form>
             </template>
         </el-table-column>
-        <el-table-column prop="id" label="用户ID" width="100px"></el-table-column>
-        <el-table-column prop="realName" label="姓名" width="120px"></el-table-column>
-        <el-table-column prop="username" label="用户名" width="120px"></el-table-column>
-        <el-table-column prop="role" label="用户类型" width="100px"></el-table-column>
-        <el-table-column prop="idtype" label="证件类型" width="100px">
+        <el-table-column prop="id" label="用户ID"></el-table-column>
+        <el-table-column prop="realName" label="姓名"></el-table-column>
+        <el-table-column prop="username" label="用户名"></el-table-column>
+        <el-table-column prop="role" label="用户类型"></el-table-column>
+        <el-table-column prop="idtype" label="证件类型">
             <template slot-scope="props">
                 {{['公民身份证','护照','军官证'][parseInt(props.row.idtype)-1]}}
             </template>
         </el-table-column>
-        <el-table-column prop="idnumber" label="证件号码" width="180px"></el-table-column>
-        <el-table-column prop="companyName" label="单位名称" width="180px"></el-table-column>
-        <el-table-column label="操作" v-if="!queryParams.isPass">
+        <el-table-column prop="idnumber" label="证件号码"></el-table-column>
+        <el-table-column prop="companyName" label="单位名称"></el-table-column>
+        <el-table-column label="操作" v-if="!queryParams.isPass" width="250px">
             <template slot-scope="props">
                 <span class="no-wrap">
                     <el-button type="success" size="mini" @click="()=>{check(props.row.id,1)}">同意</el-button>
