--- a/BR-MS/signup.html
+++ b/BR-MS/signup.html
@@ -173,7 +173,7 @@
                                             <el-form-item label="仓库" prop="warehouseId" required>
                                                 <el-select v-model="form1.warehouseId"
                                                           placeholder="请选择仓库">
-                                                    <el-option v-for="warehouse in warehouseChoice" :label="warehouse.warehouseName" :value="warehouse.warehouseId">{{warehouse.warehouseName+' (ID='+String(warehouse.warehouseId)+')'}}</el-option>
+                                                    <el-option v-for="warehouse in warehouseChoice" :label="warehouse.warehouseName" :value="warehouse.warehouseId">{{warehouse.warehouseName}}</el-option>
                                                 </el-select>
                                             </el-form-item>
                                         </div>
@@ -428,7 +428,13 @@
                     '固定电话': this.form1.tel,
                     '电子邮箱': this.form1.email,
                     '联系地址': this.form1.address,
-                    '仓库id': this.form1.warehouseId,
+                    '仓库':(()=>{
+                        for(let warehouse of this.warehouseChoice){
+                            if(warehouse.warehouseId==this.form1.warehouseId){
+                                return warehouse.warehouseName;
+                            }
+                        }
+                    })(),
                 };
 
                 var result = [];
